[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Estaciones/Station.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estaciones/carga_energia.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estaciones/vacio_comb.ogg" type="AudioStream" id=5]
[ext_resource path="res://TemporalAssets/kenney_kenney-fonts/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 76.5158
height = 162.788

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43, 43 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.180392, 0.760784, 2, 0.141176 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "activado"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 89.9999, 180.0, 270.0, 359.999 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 43, 43 ), Vector2( 45, 45 ), Vector2( 43, 43 ), Vector2( 44, 44 ), Vector2( 43, 43 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.219608, 0, 1, 0.0470588 ), Color( 0.219608, 0, 1, 0.0470588 ), Color( 0.219608, 0, 1, 0.0470588 ), Color( 0.219608, 0, 1, 0.0470588 ), Color( 0.219608, 0, 1, 0.0470588 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43, 43 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.219608, 0, 1, 0.0470588 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.556863, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.309804, 0.00784314, 1 )

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ -91.227 ]
}
energia = 77.0

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 27
__meta__ = {
"_edit_group_": true
}

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/RESET = SubResource( 3 )
anims/activado = SubResource( 5 )
anims/default = SubResource( 4 )

[node name="CargaSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "SFX"

[node name="VacioSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
bus = "SFX"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -87.3511
margin_top = -215.351
margin_right = 92.6489
margin_bottom = -188.351
custom_fonts/font = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 80.0

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]

[editable path="AreaRecarga"]
